--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           java-version: 17
           distribution: 'adopt'
+          echo: "Hello world "
       - name: Anchore SBOM Action
         uses: anchore/sbom-action@v0.6.0
         with:
