--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,12 @@ jobs:
         uses: anchore/sbom-action@v0.6.0
         with:
           artifact-name: sbom.spdx
+      - name: Validate JSON
+  # You may pin to the exact commit or the version.
+  # uses: OrRosenblatt/validate-json-action@a7082767d95a588f79b1d742a835b11bbfd4ea32
+        uses: OrRosenblatt/validate-json-action@0.1.0
+        with:
+    # Relative file path under the repository of a JSON schema file to validate the other JSON files with.
+         schema:  ./schema.json
+    # One or more relative file paths under the repository (seperated by comma) of the JSON files to validate with the schema provided.
+         json: 1.0
