--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,34 @@ jobs:
           java-version: 17
           distribution: 'adopt'
           echo: "Hello world "
-      - name: Anchore SBOM Action
-        uses: anchore/sbom-action@v0.6.0
+      - uses: ./download-syft # anchore/sbom-action/download-syft
+        id: syft
+
+      - run: |
+          echo "${{ steps.syft.outputs.cmd }}"
+          "${{ steps.syft.outputs.cmd }}" dir:.
+      - uses: ./ # anchore/sbom-action
+        id: dirscan
         with:
           artifact-name: sbom.spdx
-      - name: Validate JSON
-  # You may pin to the exact commit or the version.
-  # uses: OrRosenblatt/validate-json-action@a7082767d95a588f79b1d742a835b11bbfd4ea32
-        uses: OrRosenblatt/validate-json-action@0.1.0
+          output-file: dirscan-sbom.spdx
+          format: spdx
+      - run: |
+          echo DIR SCAN SBOM:
+          cat dirscan-sbom.spdx
+      - uses: ./ # anchore/sbom-action
+        id: imagescan
         with:
-    # Relative file path under the repository of a JSON schema file to validate the other JSON files with.
-         schema:  ./schema.json
-    # One or more relative file paths under the repository (seperated by comma) of the JSON files to validate with the schema provided.
-         json: 1.0
+          image: alpine:latest
+          artifact-name: sbom.spdx
+          output-file: my.sbom
+      - run: |
+          echo IMAGE SCAN SBOM:
+          cat my.sbom
+      - uses: ./publish-sbom # anchore/sbom-action/publish-sbom
+        with:
+          sbom-artifact-match: sbom.spdx
+
+      - uses: ./publish-sbom # anchore/sbom-action/publish-sbom
+        with:
+          sbom-artifact-match: "^dont-match-anything$"
