--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,48 @@
-name: CI
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# SPDX-License-Identifier: Apache-2.0
+
+name: Build
+
+on: [ push, pull_request ]
+
 jobs:
-  build-without-cache:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ "^1.15" ]
+    steps:
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Setup
+        run: make setup
+      #- name: Lint
+      #  run: make lint
+      #- name: Lint
+      #  run: make check-headers
+      #- name: Test
+      #  run: make test
+      - name: Build
+        run: make build
+  generate:
+    name: Generate sbom file
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: gh-action-spdx-sbom-generator
+        uses: niravpatel27/gh-action-spdx-sbom-generator@v1.0.0
         with:
-          java-version: 17
-          distribution: 'adopt'
-          echo: "Hello world "
-      - uses: ./download-syft # anchore/sbom-action/download-syft
-        id: syft
-
-      - run: |
-          echo "${{ steps.syft.outputs.cmd }}"
-          "${{ steps.syft.outputs.cmd }}" dir:.
-      - uses: ./ # anchore/sbom-action
-        id: dirscan
-        with:
-          artifact-name: sbom.spdx
-          output-file: dirscan-sbom.spdx
-          format: spdx
-      - run: |
-          echo DIR SCAN SBOM:
-          cat dirscan-sbom.spdx
-      - uses: ./ # anchore/sbom-action
-        id: imagescan
-        with:
-          image: alpine:latest
-          artifact-name: sbom.spdx
-          output-file: my.sbom
-      - run: |
-          echo IMAGE SCAN SBOM:
-          cat my.sbom
-      - uses: ./publish-sbom # anchore/sbom-action/publish-sbom
-        with:
-          sbom-artifact-match: sbom.spdx
-
-      - uses: ./publish-sbom # anchore/sbom-action/publish-sbom
-        with:
-          sbom-artifact-match: "^dont-match-anything$"
+            version: '0.0.3'   
+      - name: Check if sbom file generated
+        run: |
+          if [ ! -f "bom-go-mod.spdx" ]; then
+            echo "::error::bom-go-mod.spdx is missing. Must generate using the spdx-sbom-generator cli."
+            exit 1
+          else
+             echo "Success!"            
+          fi
