--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,10 @@ jobs:
       - uses: anchore/sbom-action@v0
         with:
           artifact-name: sbom.spdx
-      #- name: gh-action-spdx-sbom-generator
-      #  uses: Anji6789/gh-action-spdx-sbom-generator@v1.0.0
-      #  with:
-      #      version: '0.0.3'   
+      - name: gh-action-spdx-sbom-generator
+        uses: Anji6789/gh-action-spdx-sbom-generator@v1.0.0
+        with:
+            version: '0.0.3'   
       - name: Check if sbom file generated
         run: |
           if [ ! -f "bom-go-mod.spdx" ]; then
